--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
+  "private": true,
+  "type": "module",
   "devDependencies": {
-    "vitepress": "^1.1.3"
+    "vitepress": "latest"
   },
   "scripts": {
-    "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
   }
